css/style_slider.css
.intro{padding:0;background:no-repeat;}
.intro .intro-slider,
.intro .intro-slider .item{width:100%;height:500px;}
.intro .intro-slider .item.one{/*background:url(../images/furlencoImages/hero_furlenco_image1.jpg);*/background-size:100% 100%;}
.item.one > img { width:100%;position: absolute;}
.intro .intro-slider .item .background-image img{width:100%;}
.intro .intro-slider .container{color:#696969;padding:50px 0px 200px 100px;text-align:center;}
.intro .intro-slider .container .paddingtop{margin-top:10%;}
.intro .intro-slider .container h1{font-size:28px;line-height:1.5em;margin-bottom:5px;}
.intro .intro-slider .container h3{font-size:24px;line-height:1.5em;margin-bottom:30px;}
.intro .intro-slider .container figure img{max-height:526px;}
.intro .owl-controls{position:relative;bottom:50px;}
.intro .owl-controls .owl-page span{width:15px;height:15px;background:transparent;border:2px solid #ffffff;opacity:1;}
.intro .owl-controls .owl-page.active span,
.intro .owl-controls.clickable .owl-page:hover span{background:#ffffff;}
.brief .owl-buttons{height:0px;}

